--- a/WebContent/common.css
+++ b/WebContent/common.css
@@ -19,3 +19,4 @@ left:50%; margin-left:-111px; display:block; padding-left:20px; padding-right:20
 .ft_ico_lst li a { display:block; padding:6px; }
 .ft_ico_lst li img { display:block; width:100%; height:auto; }
 .ft_logo li a img { display:block; width: 50px; height: 80px;   }
+.
